# hsns

./: README.md  hns.cabal  stack.yaml  test.zone
src/: Lib.hs
src/DNS/: Protocol.hs  Transport.hs
src/DNS/MasterFile/: Parser.hs
src/DNS/Protocol/: DNSClass.hs  DNSName.hs  DNSOpcode.hs  ResourceRecord.hs  ResourceRecordType.hs  ResponseCode.hs
src/Parsing/: BinaryBit.hs  IPAddress.hs
src/Transport/: UDP.hs
test/DNS/: ProtocolSpec.hs
test/Parsing/: BinaryBitSpec.hs  IPAddressSpec.hs
