name:                hns
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hns#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
                      , DNS.Protocol
                      , DNS.Protocol.DNSClass
                      , DNS.Protocol.DNSName
                      , DNS.Protocol.DNSOpcode
                      , DNS.Protocol.ResourceRecord
                      , DNS.Protocol.ResourceRecordType
                      , DNS.Protocol.ResponseCode
                      , DNS.Transport
                      , Parsing.BinaryBit
                      , Parsing.IPAddress
                      , Transport.UDP
  build-depends:        base >= 4.7 && < 5
                      , binary
                      , binary-bits
                      , network
                      , bytestring
                      , monad-loops
                      , pretty-hex
                      , pretty-simple
                      , containers
                      , protolude
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                      , OverloadedStrings
  ghc-options:          -Wall

executable hns
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hns
  default-language:    Haskell2010

test-suite hns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hns
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Parsing.IPAddressSpec
                     , Parsing.BinaryBitSpec
                     , DNS.ProtocolSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hns
